# udcpinepdx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: agent-ready.yml
.github/workflows/: add-to-project.yml  ci.yml  pages.yml
design/: pyproject.toml
design/mocks/: gen_mocks.py  (+1 more)
design_mocks/: gen_mocks.py  gen_retro_sprite_mocks.py
docs/: agent-workflow.md
firmware/: Makefile.include  README.md  pyproject.toml
firmware/src/udcpine_firmware/: __init__.py  config.py  main.py  sensor.py  uploader.py
firmware/systemd/: udcpine-firmware.service
firmware/tests/: test_sensor.py  test_uploader.py
ops/: README.md
pi/: README.md  kiosk-launcher.sh
plans/: 2026-04-13-bootstrap.md  2026-05-27-pi-browser-lan.md  2026-05-27-real-thermocouple.md  2026-06-10-idle-temp-readout.md  2026-06-10-warmup-lifecycle-chuck.md  2026-06-16-warmup-lifecycle-chuck-impl.md  2026-06-27-pizza-blog-firing-1.md  README.md
shared/: .oxlintrc.json  Makefile.include  README.md  codegen.ts  package.json  pyproject.toml  tsconfig.json
web/backend/: .env.example  Makefile.include  pyproject.toml
web/backend/scripts/: export_firing.py  sheets_oauth_bootstrap.py
web/backend/src/udcpine_backend/: __init__.py  app.py  auth_store.py  db.py  mock_sensor.py  mock_state.py  schema.sql  sheets.py  store.py  time_source.py
web/backend/tests/: test_api.py  test_auth_store.py  test_bootstrap_env.py  test_db.py  test_ingest.py  test_mock_sensor.py  test_sheets.py  test_store.py
(+147 files in other folders)
