[project]
name = "udcpine-firmware"
version = "0.0.0"
description = "Raspberry Pi firmware: MAX6675 thermocouple sampler that posts to the udcpinepdx backend"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
]

[project.scripts]
udcpine-firmware = "udcpine_firmware.main:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "ruff>=0.4",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/udcpine_firmware"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
