[project]
name = "udcpine-backend"
version = "0.0.0"
description = "Flask backend for the udcpinepdx live dashboard"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0,<4",
  "google-auth>=2.55.0",
  "google-auth-oauthlib>=1.4.0",
  "gspread>=6.2.1",
  "udcpine-shared",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.uv.sources]
udcpine-shared = { path = "../../shared", editable = true }

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/udcpine_backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
